force-app/main/default/objects/Vehicle_URL_Mapping__c/Vehicle_URL_Mapping__c.object-meta.xml
<CustomObject>
    <label>Vehicle URL Mapping</label>
    <nameField>
        <label>Vehicle URL Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle URL Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>