force-app/main/default/objects/Vehicle_URL_Mapping__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>