force-app/main/default/objects/Vehicle_URL_Mapping__c/fields/vehicle__c.field-meta.xml
<CustomField>
    <fullName>vehicle__c</fullName>
    <label>vehicle</label>
    <type>TextArea</type>
</CustomField>