force-app/main/default/objects/Vehicle_URL_Mapping__c/fields/Vehicle_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Mapping__c</fullName>
    <formula>Year__c+TRIM(SUBSTITUTE(UPPER(vehicle__c),&quot; &quot;,&quot;&quot;))</formula>
    <label>Vehicle Mapping</label>
    <type>Text</type>
</CustomField>